--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "electron-store": "^8.1.0",
     "emotion-reset": "^3.0.1",
     "firebase": "^9.15.0",
+    "firebase-admin": "^11.4.1",
     "react-query": "^3.39.2",
     "react-toastify": "^9.1.1"
   },
