--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -1,5 +1,5 @@
 appId: com.example.nextron
-productName: My Nextron App
+productName: Nextron Chat
 copyright: Copyright © 2018 Yoshihide Shiono
 directories:
   output: dist
